--- a/settings.ini
+++ b/settings.ini
@@ -3,15 +3,15 @@
 host = github
 lib_name = {lib_name}
 # For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
+repo_name = hello_nbdev
+company_name = fafs
 
 user = {user}
-# description = A description of your project
-# keywords = some keywords
+description = A tutorial project nbdev by fafs
+keywords = nbdev fs
 author = {author}
 author_email = {author_email}
-# copyright = Put your copyright information here
+copyright = FS llc
 branch = {branch}
 version = 0.0.1
 min_python = 3.6
