--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = fafs_hello
 # For Enterprise Git add variable repo_name and company name
 repo_name = hello_nbdev
 company_name = fafs
 
-user = {user}
+user = fs2013
 description = A tutorial project nbdev by fafs
 keywords = nbdev fs
-author = {author}
-author_email = {author_email}
+author = Fahri Surucu
+author_email = fahri.surucu@gmail.com
 copyright = FS llc
-branch = {branch}
+branch = First Branch
 version = 0.0.1
 min_python = 3.6
 audience = Developers
