--- a/settings.ini
+++ b/settings.ini
@@ -7,8 +7,8 @@ repo_name = hello_nbdev
 company_name = fafs
 
 user = fs2013
-description = A tutorial project nbdev by fafs
-keywords = nbdev fs
+description = A tutorial project hello_nbdev by fafs
+keywords = hello_nbdev fs
 author = Fahri Surucu
 author_email = fahri.surucu@gmail.com
 copyright = FS llc
