revert latest changes

--- a/settings.ini
+++ b/settings.ini
@@ -1,14 +1,14 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = "fafs_hello"
+lib_name = fafs_hello
 # For Enterprise Git add variable repo_name and company name
-repo_name = "hello_nbdev"
+repo_name = hello_nbdev
 company_name = fafs
 
 user = fs2013
 description = A tutorial project hello_nbdev by fafs
-keywords = hellonbdev fs
+keywords = hello_nbdev fs
 author = Fahri Surucu
 author_email = fahri.surucu@gmail.com
 copyright = FS llc
